force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__AdditionalCode1Id__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdditionalCode1Id__c</fullName>
    <label>Additional Code1</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdditionalCode1Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>