force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__BaselineUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BaselineUnitOfMeasureId__c</fullName>
    <label>Baseline Unit of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BaselineUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>