force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__BaselineValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__BaselineValue__c</fullName>
    <label>Baseline Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BaselineValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>