force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__CareObservationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareObservationStatus__c</fullName>
    <label>Care Observation Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareObservationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>