force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ComponentSourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ComponentSourceRecordId__c</fullName>
    <label>Component Source Record</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ComponentSourceRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>