force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__DerivationSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DerivationSourceId__c</fullName>
    <label>Derivation Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DerivationSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>