force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceId__c</fullName>
    <label>Device</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>