force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservationEndTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservationEndTime__c</fullName>
    <label>Observation EndTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservationEndTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>