force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservationStartTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservationStartTime__c</fullName>
    <label>Observation StartTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservationStartTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>