force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservationStatusText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservationStatusText__c</fullName>
    <label>Observation Status</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservationStatusText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>