force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservedSubjectAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedSubjectAccountId__c</fullName>
    <label>Observed Subject Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedSubjectAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>