force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservedSubjectId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedSubjectId__c</fullName>
    <label>Observed Subject</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedSubjectId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>