force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservedUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedUnitOfMeasureId__c</fullName>
    <label>Observed Unit of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>