force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservedValueNmrtrNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedValueNmrtrNumber__c</fullName>
    <label>Observed Value Numerator</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedValueNmrtrNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>