force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObservedValueUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObservedValueUOMId__c</fullName>
    <label>Observed Value Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObservedValueUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>