force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObserverId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObserverId__c</fullName>
    <label>Observer</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObserverId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>