force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ObserverObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ObserverObject__c</fullName>
    <label>Observer Object</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ObserverObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>