force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__ProcessingResultText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProcessingResultText__c</fullName>
    <label>Processing Result</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProcessingResultText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>