force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__rel_1716726239275_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726239275_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareObservation_BodySiteId_map_CodeS_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>CareObservation_BodySiteId_map_CodeS_rel</relationshipLabel>
    <relationshipName>rel_1716726239275_end</relationshipName>
    <type>Lookup</type>
</CustomField>