force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__rel_1716726241506_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726241506_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareObservation_DerivationSourceId_m_rel</label>
    <referenceTo>ssot__CareObservation__dlm</referenceTo>
    <relationshipLabel>CareObservation_DerivationSourceId_m_rel</relationshipLabel>
    <relationshipName>rel_1716726241506_end</relationshipName>
    <type>Lookup</type>
</CustomField>