force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__rel_1716726245081_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726245081_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareObservation_ComponentSourceRecor_rel</label>
    <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
    <relationshipLabel>CareObservation_ComponentSourceRecor_rel</relationshipLabel>
    <relationshipName>rel_1716726245081_end</relationshipName>
    <type>Lookup</type>
</CustomField>