force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__SourceRequestReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceRequestReferenceObject__c</fullName>
    <label>Source Request Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceRequestReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>