force-app/main/default/objects/ssot__CareObservation__dlm/fields/ssot__SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceSystem__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceSystem</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>